# gulimall-rust

./: .env  Cargo.toml
gulimall-order/: Cargo.toml
gulimall-product/: Cargo.toml
gulimall-product/src/: lib.rs  main.rs
gulimall-product/src/entity/: mod.rs  pms_attr.rs  pms_attr_attrgroup_relation.rs  pms_attr_group.rs  pms_brand.rs  pms_category.rs  pms_category_brand_relation.rs  pms_comment_replay.rs  pms_product_attr_value.rs  pms_sku_images.rs  pms_sku_info.rs  pms_sku_sale_attr_value.rs  pms_spu_comment.rs  pms_spu_images.rs  pms_spu_info.rs  pms_spu_info_desc.rs  prelude.rs
gulimall-product/src/error/: app_err.rs  app_response.rs  mod.rs
gulimall-product/src/router/: category.rs  mod.rs
gulimall-product/src/service/: category.rs  category_brand_relation.rs  mod.rs
