[workspace]
members =[
    "gulimall-order",
    "gulimall-product"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros" ] }
utoipa = { version = "3", features = ["actix_extras"] }
validator = {version = "0.16.0", features = ["derive"]}
thiserror ="1.0.40"